install-usb-gui (0.2.32) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 17 Dec 2009 10:47:45 +0100

install-usb-gui (0.2.31) unstable; urgency=low

  * actualized the debian/copyright file with all bits.

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 13 Dec 2009 22:05:27 +0100

install-usb-gui (0.2.30) unstable; urgency=low

  * rebuild gcc-4.4.
  * remove unused tarball.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 08 Dec 2009 18:58:45 +0100

install-usb-gui (0.2.29) unstable; urgency=low

  * update maintainer information.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 01 Nov 2009 13:47:23 +0100

install-usb-gui (0.2.28) unstable; urgency=low

  [ Joaquim Boura ]
  * frontend does not need root to be called. This is done when calling
    the backend, as that script goes to /usr/bin.
    Changes done in previous commit were all discarded.

  [ Stefan Lippers-Hollmann ]
  * bump standards version to 3.8.3, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 22 Aug 2009 16:32:05 +0200

install-usb-gui (0.2.27) unstable; urgency=low

  * protect iso name against spaces in the pathname.
    start terminal with dbus-launch, otherwise call  of fll-iso2usb can fail 
    if install-usb-gui.bash is called in a root terminal.

 -- Joaquim Boura <x-un-i@sidux.com>  Fri, 21 Aug 2009 22:38:25 +0200

install-usb-gui (0.2.26) unstable; urgency=low

  * remove deprecated dh_desktop call.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 19 Jul 2009 14:39:07 +0200

install-usb-gui (0.2.25) unstable; urgency=low

  [ Bernard Gray ]
  * update art for 2009-02
  * convert all bitmaps to new svg art
  * update copyright for new art
  * vacuum defs for svg icons 

  [ Stefan Lippers-Hollmann ]
  * generate binary artwork.
  * bump compats level to 7, we already require dh7 anyways.
  * bump standards version to 3.8.2, no changes necessary.
